--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a {
   content: "";
   float: left;
   display: block;
-  background-image: url("./img/212954_f015_icon.png");
+  background-image: url("./212954_f015_icon.png");
   background-size: 26px 26px;
   background-position: -3px 6px;
   background-repeat: no-repeat;
@@ -84,7 +84,7 @@ a {
   content: "";
   float: right;
   display: block;
-  background-image: url("./img/213127_f0da_icon.png");
+  background-image: url("./213127_f0da_icon.png");
   background-size: 20px 18px;
   background-position: -3px 12px;
   background-repeat: no-repeat;
@@ -92,7 +92,7 @@ a {
   height: 40px;
 }
 .nav > li > a:hover::after {
-  background-image: url("./img/213127_f0da_icon\ -\ 複製.png");
+  background-image: url("./213127_f0da_icon\ -\ 複製.png");
   background-size: 16px 18px;
   background-position: 0px 10px;
 }
@@ -100,7 +100,7 @@ a {
   content: "";
   float: left;
   display: block;
-  background-image: url("./img/212967_f024_icon.png");
+  background-image: url("./212967_f024_icon.png");
   background-size: 17px 17px;
   background-position: -2px 12px;
   background-repeat: no-repeat;
@@ -108,7 +108,7 @@ a {
   height: 40px;
 }
 .nav .f024:hover::before {
-  background-image: url("./img/212967_f024_icon (2).png");
+  background-image: url("./212967_f024_icon (2).png");
 }
 .nav ul {
   position: absolute;
@@ -146,7 +146,7 @@ a {
   float: left;
   display: block;
   margin-right: 5px;
-  background-image: url("./img/1608752_language_icon.png");
+  background-image: url("./1608752_language_icon.png");
   background-size: 16px 16px;
   background-position: -2px 0px;
   background-repeat: no-repeat;
@@ -173,7 +173,7 @@ a {
   content: "";
   float: left;
   display: block;
-  background-image: url("./img/213069_f090_icon.png");
+  background-image: url("./213069_f090_icon.png");
   background-size: 18px 18px;
   background-position: -2px 12px;
   background-repeat: no-repeat;
@@ -181,7 +181,7 @@ a {
   height: 40px;
 }
 .login a:hover::before {
-  background-image: url("./img/213069_f090_icon\ \(2\).png");
+  background-image: url("./213069_f090_icon\ \(2\).png");
 }
 .bannerads {
   position: relative;
@@ -223,21 +223,21 @@ a {
   cursor: pointer;
 }
 .prev:hover {
-  background-image: url("./img/213212_f137_icon (1).png");
+  background-image: url("./213212_f137_icon (1).png");
 }
 .next:hover {
-  background-image: url("./img/213212_f137_icon (1) - 複製.png");
+  background-image: url("./213212_f137_icon (1) - 複製.png");
 }
 .prev {
   left: 16px;
-  background-image: url("./img/213212_f137_icon.png");
+  background-image: url("./213212_f137_icon.png");
   background-size: 74px 74px;
   background-position: -7px -7px;
   background-repeat: no-repeat;
 }
 .next {
   right: 16px;
-  background-image: url("./img/213212_f137_icon - 複製.png");
+  background-image: url("./213212_f137_icon - 複製.png");
   background-size: 74px 74px;
   background-position: -7px -7px;
   background-repeat: no-repeat;
@@ -309,7 +309,7 @@ a {
   content: "";
   float: left;
   display: block;
-  background-image: url("./img/212941_f007_icon.png");
+  background-image: url("./212941_f007_icon.png");
   background-size: 26px 26px;
   background-position: -4px -2px;
   background-repeat: no-repeat;
@@ -324,7 +324,7 @@ a {
   content: "";
   float: left;
   display: block;
-  background-image: url("./img/213227_f147_icon.png");
+  background-image: url("./213227_f147_icon.png");
   background-size: 17px 17px;
   background-position: -2px 1px;
   background-repeat: no-repeat;
