--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a {
 .nav ul {
   position: absolute;
   top: 40px;
-  padding: 5px 20px 5px 0;
+  padding: 5px 0px 5px 0;
   border: 1px solid #99000f;
   border-radius: 4px;
   background-color: #fff;
@@ -130,7 +130,15 @@ a {
   border-bottom: 7px solid #ccc;
   border-bottom-color: rgba(0, 0, 0, 0.2);
 }
+.nav ul li {
+  padding-right: 24px;
+  cursor: pointer;
+}
+.nav ul li:hover {
+  background-color: #943b21;
+}
 .nav ul a {
+  float: none;
   display: inline-block;
   margin: 3px 25px 3px 15px;
   color: #943b21;
@@ -140,6 +148,9 @@ a {
   height: 20px;
   font-family: Verdana;
   white-space: nowrap;
+}
+.nav ul a:hover {
+  color: white;
 }
 .nav ul a::before {
   content: "";
@@ -152,6 +163,9 @@ a {
   background-repeat: no-repeat;
   width: 18px;
   height: 18px;
+}
+.nav ul a:hover::before {
+  background-image: url("./1608752_language_icon (2).png");
 }
 .login {
   float: right;
