--- a/style.css
+++ b/style.css
@@ -28,19 +28,34 @@ a {
   margin: 0 auto;
 }
 .banner {
+  margin-bottom: 40px;
   background-image: url(https://ilearn2.fcu.edu.tw/theme/image.php/essential/theme/1645687537/bg/header);
 }
 .banner img {
   display: block;
 }
 .navbar {
+  position: fixed;
+  width: 100%;
+  top: 100px;
   background-color: #99000f;
+  z-index: 20;
+  transition: top 0.375s ease;
+}
+.navbar-active {
+  position: fixed;
+  top: 0;
+  background-color: #99000f;
+  z-index: 20;
+  width: 100%;
+  transition: top 0.375s ease;
 }
 .navbar-in {
   margin: 0 auto;
   height: 40px;
 }
-.navbar a {
+.navbar a,
+.navbar-active a {
   float: left;
   display: block;
   height: 40px;
