--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/*  定位/float/display
-    盒子模型:margin/border/padding/weidth/height/backgroundcolor
-    文字樣式 
-*/
 * {
   margin: 0;
   padding: 0;
@@ -32,7 +28,7 @@ a {
   background-image: url(https://ilearn2.fcu.edu.tw/theme/image.php/essential/theme/1645687537/bg/header);
 }
 .banner img {
-  display: block;
+  display: flex;
 }
 .navbar {
   position: fixed;
@@ -200,54 +196,17 @@ a {
 .login a:hover::before {
   background-image: url("./213069_f090_icon\ \(2\).png");
 }
-.bannerads {
-  position: relative;
-  height: 378px;
-  padding: 7px 20px;
-  overflow: hidden;
-}
-.circle {
-  position: absolute;
-  top: 15px;
-  right: 5px;
-  background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 0 0 8px #30add1;
-  border-radius: 4px;
-  padding: 2px 5px 2px 0px;
-  z-index: 2;
-}
-.circle li {
-  float: left;
-  width: 10px;
-  height: 10px;
-  margin-left: 5px;
-  border-radius: 50%;
-  background-color: #30add1;
-}
-.active {
-  transition: background-color 1s;
-  background-color: #217a94 !important;
-}
-.cont {
-  padding: 10px 0 0 0;
-}
 .prev,
 .next {
   position: absolute;
-  top: 134px;
+  top: 280px;
   width: 60px;
   height: 60px;
   border-radius: 50%;
   cursor: pointer;
   z-index: 5;
   transition: transform 0.5s, opacity 0.5s;
-  opacity: 1;
-}
-.prev:hover {
-  background-image: url("./213212_f137_icon (1).png");
-}
-.next:hover {
-  background-image: url("./213212_f137_icon (1) - 複製.png");
+  opacity: 0.6;
 }
 .prevbig,
 .nextbig {
@@ -256,30 +215,50 @@ a {
   opacity: 0;
 }
 .prev {
-  left: 16px;
+  left: 174px;
   background-image: url("./213212_f137_icon.png");
   background-size: 70px 70px;
   background-position: -7px -7px;
   background-repeat: no-repeat;
 }
 .next {
-  right: 16px;
+  right: 174px;
   background-image: url("./213212_f137_icon - 複製.png");
   background-size: 70px 70px;
   background-position: -7px -7px;
   background-repeat: no-repeat;
 }
+.cont {
+  padding-top: 10px;
+}
+.slider {
+  width: 1200px;
+  height: 378px;
+  overflow: hidden;
+}
+.slides {
+  width: 1600%;
+  height: 378px;
+  display: flex;
+  padding: 7px 20px;
+}
+.slides input {
+  display: none;
+}
+.slide {
+  position: relative;
+  transition: 0.5s;
+  display: flex;
+  width: 1200px;
+}
 .bleft {
-  float: left;
-  display: table;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   width: 465.98px;
   height: 368px;
-  padding: 0 0 0 81.2px;
-}
-.bleft li {
-  display: none;
-  vertical-align: middle;
-  width: 100%;
+  padding-left: 81.2px;
 }
 .bleft h4 {
   margin: 10px 0;
@@ -295,21 +274,15 @@ a {
   font-size: 20px;
 }
 .bright {
-  float: right;
   position: absolute;
-  right: 20px;
-  width: 664.25px;
+  right: 30px;
+  display: flex;
+  justify-content: center;
   height: 368px;
   padding: 0 33.2125px;
 }
-.bright li {
-  display: none;
-}
-.bright a {
-  text-align: center;
-}
 .bright img {
-  margin: 8px 0 0 -8px;
+  margin: 9px 5px 0 -8px;
   padding: 8px;
   width: 608px;
   height: 349px;
@@ -322,19 +295,90 @@ a {
 }
 .img14 {
   position: relative;
-  left: 60px;
+  right: 62px;
   width: 487.33px !important;
 }
 .img15 {
   position: relative;
-  left: 74px;
+  right: 76px;
   width: 460px !important;
 }
 .img16 {
   position: relative;
-  top: 74px;
+  top: 73px;
+  left: 5px;
   width: 613.83px !important;
   height: 203.63px !important;
+}
+.manual {
+  position: absolute;
+  margin-top: -362px;
+  margin-left: 950px;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 8px #30add1;
+  border-radius: 4px;
+  padding: 2px 5px 2px 0px;
+  z-index: 2;
+}
+.manual-label {
+  float: left;
+  width: 10px;
+  height: 10px;
+  margin-left: 5px;
+  border-radius: 50%;
+  background-color: #30add1;
+  transition: 1s;
+}
+.active {
+  background-color: #217a94;
+}
+#radio0:checked ~ .first {
+  margin-left: 0;
+}
+#radio1:checked ~ .first {
+  margin-left: -1202px;
+}
+#radio2:checked ~ .first {
+  margin-left: -2402px;
+}
+#radio3:checked ~ .first {
+  margin-left: -3602px;
+}
+#radio4:checked ~ .first {
+  margin-left: -4802px;
+}
+#radio5:checked ~ .first {
+  margin-left: -6002px;
+}
+#radio6:checked ~ .first {
+  margin-left: -7202px;
+}
+#radio7:checked ~ .first {
+  margin-left: -8402px;
+}
+#radio8:checked ~ .first {
+  margin-left: -9602px;
+}
+#radio9:checked ~ .first {
+  margin-left: -10802px;
+}
+#radio10:checked ~ .first {
+  margin-left: -12002px;
+}
+#radio11:checked ~ .first {
+  margin-left: -13202px;
+}
+#radio12:checked ~ .first {
+  margin-left: -14402px;
+}
+#radio13:checked ~ .first {
+  margin-left: -15602px;
+}
+#radio14:checked ~ .first {
+  margin-left: -16802px;
+}
+#radio15:checked ~ .first {
+  margin-left: -18002px;
 }
 .page-content {
   margin-top: 10px;
@@ -549,43 +593,3 @@ tr a:hover {
 .footer-text2 a:hover {
   color: white;
 }
-
-/* .prev,
-.next {
-  position: absolute;
-  top: 134px;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 5;
-  transition: transform 0.5s, opacity 0.5s;
-  opacity: 1;
-}
-.prevbig,
-.nextbig {
-  transition: transform 0.5s, opacity 0.5s;
-  transform: scale(5);
-  opacity: 0;
-}
-.disappear-left {
-  opacity: 0;
-  transform: translateX(-1200px);
-  transition: all 1s;
-}
-.appear-left {
-  transition: all 1s;
-  transform: translateX(-1200px);
-}
-
-.appear-right {
-  transform: translateX(-1200px);
-  transition: all 1s;
-}
-
-.left-tomiddle1 {
-  transform: translateX(1200px);
-}
-.left-tomiddle2 {
-  display: none !important;
-} */
